# python-sqlalchemy-m2m

./: .env.sample  README.md  compose.yml  logging.conf.yml  pyproject.toml
src/sqlalchemy_m2m/: init_db.py  main.py
